2005-09-03  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Depend on pygtk 2.8. Fixes bug #314557.

	* src/languages.h:

	Remove duplicate entries.

2005-09-01  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-toolbar-editor.c: (ephy_toolbar_editor_constructor):
	* src/pdm-dialog.c: (show_cookies_properties):

	Fix HIG spacings.

2005-09-01  Christian Persch  <chpe@cvs.gnome.org>

	* data/glade/epiphany.glade:

	Remove find dialogue, and tweak spacings to be HIG compliant.

2005-09-01  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	* embed/mozilla/EphyBrowser.cpp:

	Only listen for trusted events.

2005-08-31  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Update gtk requirement.

2005-08-31  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/GtkNSSSecurityWarningDialogs.cpp:

	Better message on the enter-secure warning.

2005-08-29  Christian Persch  <chpe@cvs.gnome.org>

	* lib/ephy-debug.c:

	Only include execinfo.h if it exists.

2005-08-29  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	* lib/ephy-debug.c: (trap_handler):

	Check for execinfo.h. Fixes bug #314776.

2005-08-28  Christian Persch  <chpe@cvs.gnome.org>

	* ChangeLog-20050828:
	* Makefile.am:
	* autogen.sh:
	* configure.ac:
	* data/Makefile.am:
	* data/epiphany-1.10.pc.in:
	* data/epiphany-1.8.pc.in:
	* doc/reference/Makefile.am:
	* embed/Makefile.am:
	* embed/mozilla/Makefile.am:
	* lib/Makefile.am:
	* lib/egg/Makefile.am:
	* lib/ephy-dbus.c: (session_filter_func), (system_filter_func),
	(ephy_dbus_connect_to_session_bus), (ephy_dbus_disconnect_bus):
	* lib/widgets/Makefile.am:
	* src/Makefile.am:
	* src/bookmarks/Makefile.am:

	Version 1.9.