@@ -1,3 +1,9 @@
+2005-09-05  Christian Persch  <chpe@cvs.gnome.org>
+
+	* embed/mozilla/EphyUtils.cpp:
+
+	Mozilla printing code is braindead. Bug #163255.
+
 2005-09-03  Christian Persch  <chpe@cvs.gnome.org>
 
 	* configure.ac:
